fix bookmark group spacing

--- a/src/component/BookmarkGroup/index.css
+++ b/src/component/BookmarkGroup/index.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: calc((var(--bookmark-group-spacing) / 10) * 1em);
-  padding: 3em 0;
+  padding: calc((var(--bookmark-group-spacing) / 10) * 1em) 0;
   z-index: 2;
 }
 
